# habit_tracker

./: .env.test  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_duration.py
users/: models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
